; ModuleID = '/home/carl/AnghaBench/libuv/src/extr_uv-common.c_uv_udp_try_send.c'
source_filename = "/home/carl/AnghaBench/libuv/src/extr_uv-common.c_uv_udp_try_send.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @uv_udp_try_send(i32* %0, i32* %1, i32 %2, %struct.sockaddr* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.sockaddr*, align 8
  %10 = alloca i32, align 4
  store i32* %0, i32** %6, align 8
  store i32* %1, i32** %7, align 8
  store i32 %2, i32* %8, align 4
  store %struct.sockaddr* %3, %struct.sockaddr** %9, align 8
  %11 = load i32*, i32** %6, align 8
  %12 = load %struct.sockaddr*, %struct.sockaddr** %9, align 8
  %13 = call i32 @uv__udp_check_before_send(i32* %11, %struct.sockaddr* %12)
  store i32 %13, i32* %10, align 4
  %14 = load i32, i32* %10, align 4
  %15 = icmp slt i32 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %4
  %17 = load i32, i32* %10, align 4
  store i32 %17, i32* %5, align 4
  br label %25

18:                                               ; preds = %4
  %19 = load i32*, i32** %6, align 8
  %20 = load i32*, i32** %7, align 8
  %21 = load i32, i32* %8, align 4
  %22 = load %struct.sockaddr*, %struct.sockaddr** %9, align 8
  %23 = load i32, i32* %10, align 4
  %24 = call i32 @uv__udp_try_send(i32* %19, i32* %20, i32 %21, %struct.sockaddr* %22, i32 %23)
  store i32 %24, i32* %5, align 4
  br label %25

25:                                               ; preds = %18, %16
  %26 = load i32, i32* %5, align 4
  ret i32 %26
}

declare dso_local i32 @uv__udp_check_before_send(i32*, %struct.sockaddr*) #1

declare dso_local i32 @uv__udp_try_send(i32*, i32*, i32, %struct.sockaddr*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
